Road Type Visible Issue

--- a/frontend/web/rainmaker/dev-packages/pt-employee-dev/src/Screens/FormWizardDataEntry/components/WizardComponent/index.scss
+++ b/frontend/web/rainmaker/dev-packages/pt-employee-dev/src/Screens/FormWizardDataEntry/components/WizardComponent/index.scss
@@ -68,3 +68,10 @@
     flex: auto !important;
   }
 }
+@media only screen and (min-width:768px){
+
+.contentdiv
+{
+  height: 528px !important;
+}
+}
